subscribe center and card spacing fixes

--- a/static/sass/cards/_card-2.scss
+++ b/static/sass/cards/_card-2.scss
@@ -6,6 +6,7 @@
         border-bottom: 1px solid $grey4;
         padding-bottom: 15px;
         margin-bottom: 15px;
+        height: 350px;
 
         &__media {
             margin-bottom: 15px;
@@ -18,6 +19,7 @@
             @include font-size(14);
             line-height: 1.33;
             margin-top: 5px;
+            height: 72px;
         }
 
         &__description {
